2008-07-11  Christophe Romain  <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Backport C2S blacklist support from trunk
	was (EJAB-625).
	* src/mod_ip_blacklist.erl: Likewise.

2008-07-10  Badlop  <badlop@process-one.net>

	* src/configure.ac: Don't check for erlang header file (EJAB-232)
	* src/configure: Likewise

2008-07-09  Badlop  <badlop@process-one.net>

	* src/configure.ac: Check for erlang header files (EJAB-232)
	* src/configure: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Fix compilator warnings

	* src/mod_muc/mod_muc_log.erl: Fix XHTML compliance: ensure some
	language is set, include ID attribute in each message, add
	microseconds to ensure unique value (EJAB-497)

	* src/ejabberd_config.erl (load_file): error message on sasl.log
	is not flattened (EJAB-616)

	* doc/guide.tex: mod_muc_log XMPP URI supports the updated version
	RFC 5122 (EJAB-631)
	* doc/guide.html: Likewise

2008-07-08  Badlop  <badlop@process-one.net>

	* tools/ejabberdctl: Work also when 'which' is unavailable

2008-07-08  Christophe Romain  <christophe.romain@process-one.net>

	* src/web/ejabberd_http_poll.erl: improve ip fetching patch

2008-07-07  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Spool, config and log dirs: writtable by owner,
	readable by group, nothing by others (EJAB-686)
	* doc/guide.tex: New section Securing sensible files
	* doc/guide.html: Likewise

	* doc/guide.tex: Solaris Makefile install: use ginstall (thanks to
	Jonathan Auer)(EJAB-649)
	* doc/guide.html: Likewise

2008-07-03  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/mod_privacy_odbc.erl: Support for privacy lists in MySQL
	(thanks to Igor Goryachev)(EJAB-538)

2008-07-03  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix permission control on item
	retrieve (EJAB-453)
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise